--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "express-validator": "^6.4.0",
     "multer": "^1.4.2",
     "mysql": "^2.18.1",
+    "node-pre-gyp": "^0.14.0",
     "nodemon": "^2.0.3",
     "save": "^2.4.0",
     "util.promisify": "^1.0.1"
