--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "aws-sdk": "^2.665.0",
     "bcrypt": "^4.0.1",
     "body-parser": "^1.19.0",
     "dotenv": "^8.2.0",
@@ -17,8 +18,11 @@
     "express-flash": "0.0.2",
     "express-session": "^1.17.1",
     "express-validator": "^6.4.0",
+    "multer": "^1.4.2",
     "mysql": "^2.18.1",
+    "node-pre-gyp": "^0.14.0",
     "nodemon": "^2.0.3",
+    "save": "^2.4.0",
     "util.promisify": "^1.0.1"
   }
 }
