--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "aws-sdk": "^2.665.0",
     "bcrypt": "^4.0.1",
     "body-parser": "^1.19.0",
+    "connect-session-sequelize": "^6.1.1",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-flash": "0.0.2",
