--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "node-pre-gyp": "^0.14.0",
     "nodemon": "^2.0.3",
     "save": "^2.4.0",
+    "sequelize": "^5.21.7",
     "sqlite3": "^4.2.0",
     "util.promisify": "^1.0.1"
   }
