--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-flash": "0.0.2",
+    "express-mysql-session": "^2.1.4",
     "express-session": "^1.17.1",
     "express-validator": "^6.4.0",
     "multer": "^1.4.2",
@@ -25,7 +26,6 @@
     "nodemon": "^2.0.3",
     "save": "^2.4.0",
     "sequelize": "^5.21.7",
-    "sqlite3": "^4.2.0",
     "util.promisify": "^1.0.1"
   }
 }
